fix layout bug for small screens

--- a/index-styles.css
+++ b/index-styles.css
@@ -384,6 +384,7 @@ section {
 
 #introduccion {
     height: calc(100vh - 3rem);
+    min-height: 40rem;
 }
 
 .card-link.text {
